COMPLETES THE INTO SECTION

--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
                     <span id="num">0</span>
                 </div>
             </div>
-            <h1>INTRODUCTION SECTION</h1>
+            <div class="hero-section">
+                <h1>THE E-<br>MILLENIAL<br> STORE</h1>
+                <img src="images/heroImage.png" alt="heroImage" width="500px">
+            </div>
+            <div class="shop"><h3>SHOP NOW</h3></div>
         </div>
+
     </div>
     
 </body>
