ADDS CONTENT AND STYLES FOR ABOUT SECTION

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         
+       <div class="intro-wrapper">
         <div class="intro-section">
             <div class="navbar">
                 <div class="logo">
@@ -31,6 +32,21 @@
                 <img src="images/heroImage.png" alt="heroImage" width="500px">
             </div>
             <div class="shop"><h3>SHOP NOW</h3></div>
+        </div>
+       </div>
+        
+        <div class="about">
+            <div>
+                <p>E-Millenial Store is an hypothetical online store for 
+                    gadgets we believe every 'Millenial' or 'Gen Z' should have today. 
+                    We've got mobile phones, laptops, smartwatches and other gadgets. 
+                    Explore all our gadgets and choose the once that suit you.  
+                </p>
+            </div>
+        </div>
+
+        <div class="gadgets">
+            <h1>OUR GADGETS</h1>
         </div>
 
     </div>
