ADDS PRODUCTS TO PRODUCT SECTION AND APPLIES BASIC STYLES

--- a/index.html
+++ b/index.html
@@ -47,6 +47,38 @@
 
         <div class="gadgets">
             <h1>OUR GADGETS</h1>
+            <div class="products">
+                <div class="product-card">
+                    <img src="images/product1.png" alt="product1">
+                    <h3>SAMSUNG TV</h3>
+                    <div class="add-to-cart">ADD TO CART</div>
+                </div>
+                <div class="product-card">
+                    <img src="images/product1.png" alt="product1">
+                </div>
+                <div class="product-card">
+                    <img src="images/product1.png" alt="product1">
+                </div>
+                <div class="product-card">
+                    <img src="images/product1.png" alt="product1">
+                </div>
+                <div class="product-card">
+                    <img src="images/product1.png" alt="product1">
+                </div>
+                
+            </div>
+        </div>
+
+        <div class="footer">
+            <div class="footer-items">
+                <div class="logo">
+                    <p>EMS</p>
+                </div>
+                <div class="designer">
+                    <p>Designed and Crafted by a Frontend Ninja</p>
+                </div>
+
+            </div>
         </div>
 
     </div>
@@ -61,5 +93,7 @@
         number++;
         num.textContent = number;
     }
+
+
 </script>
 </html>
