ADDS FOOTER CONTENT AND APPLY BASIC STYLINS

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ustacky Ecommerce Project | Frontend</title>
+    <title>Ecommerce Project | Frontend</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -71,13 +71,11 @@
 
         <div class="footer">
             <div class="footer-items">
-                <div class="logo">
-                    <p>EMS</p>
-                </div>
+                <!-- <h1 class="footer-logo">EMS</h1> -->
+                <p class="footer-logo">EMS</p>
                 <div class="designer">
                     <p>Designed and Crafted by a Frontend Ninja</p>
                 </div>
-
             </div>
         </div>
 
