ADJUSTS RESPONSIVENESS ACROSS DIFFERENT SCREEN SIZES

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="modal-bg">
             <div class="cart-modal">
                 <div class="cart-details">
-                    <table class="">
+                    <table>
                         <thead>
                           <tr style="margin-bottom: 50px;">
                             <th>S/N</th>
@@ -58,7 +58,7 @@
                     <div class="next-btn">
                         <button type="button">Continue Shopping</button>
                         <button type="button">Checkout</button>
-                      </div>
+                    </div>
                 </div>
             </div>
         </div> 
