IMPLEMENTS SUMMARY MODAL

--- a/index.html
+++ b/index.html
@@ -62,6 +62,33 @@
                 </div>
             </div>
         </div> 
+        <div class="modal-bm">
+            <div class="cart-modal">
+                <div class="recap-details" style="padding-right: 0;">
+                    <div class="order-details">
+                        <p>Thank You, <span>Ibrahim</span>, Your Order Has been Received</p>
+                        <img src="images/check.svg" alt="check">
+                        <p>Summary</p>
+                        <table>
+                            <thead>
+                            <tr style="margin-bottom: 50px;">
+                                <th>S/N</th>
+                                <th>Item</th>
+                                <th>Quantity</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Apple watch</td>
+                                <td>1</td>
+                            </tr>   
+                        </table>
+                    </div>
+                    <button type="button" style="float: right; padding: 1.5% 13%;background-color: #FF9A3D;border-radius: 5%;color: #fff;border:none">OK</button>
+                </div>
+            </div>
+        </div>
        <div class="intro-wrapper">
         <div class="intro-section">
             <div class="navbar">
@@ -98,7 +125,16 @@
 
         <div class="gadgets">
             <h1>OUR GADGETS</h1>
-            <div class="products" id="products"></div>
+            <div class="products" id="products">
+                <!-- <div class="product-card" id="product-box"> 
+                    <div class="prod${product.id}-img prod${product.id}-details prod-feature">
+                        <p class="price">Price</p>
+                        <p>&#8358;${product.price}</p>   
+                    </div>
+                    <h3 id="title">${product.title}</h3>
+                    <button type="button" class="add-to-cart" data-id="${product.id}" >ADD TO CART</button>
+                </div> -->
+            </div>
         </div>
 
         <div class="footer">
