REMOVES INLINE CSS

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="cart-details">
                     <table>
                         <thead>
-                          <tr style="margin-bottom: 50px;">
+                          <tr>
                             <th>S/N</th>
                             <th>Item</th>
                             <th>Price</th>
@@ -64,14 +64,14 @@
         </div> 
         <div class="modal-bm">
             <div class="cart-modal">
-                <div class="recap-details" style="padding-right: 0;">
+                <div class="recap-details">
                     <div class="order-details">
                         <p>Thank You, <span>Ibrahim</span>, Your Order Has been Received</p>
                         <img src="images/check.svg" alt="check">
                         <p>Summary</p>
                         <table>
                             <thead>
-                            <tr style="margin-bottom: 50px;">
+                            <tr>
                                 <th>S/N</th>
                                 <th>Item</th>
                                 <th>Quantity</th>
@@ -85,7 +85,7 @@
                             </tr>   
                         </table>
                     </div>
-                    <button type="button" style="float: right; padding: 1.5% 13%;background-color: #FF9A3D;border-radius: 5%;color: #fff;border:none">OK</button>
+                    <button type="button">OK</button>
                 </div>
             </div>
         </div>
@@ -146,9 +146,7 @@
             </div>
             <div id="test-id"></div>
         </div>
-
-    </div>
-    
+    </div>  
 </body>
 
 <script src="cart.js"></script>
