IMPLEMENTS SCROLL BEHAVIOUR ACROSS THE PAGE

--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
             </div>
         </div>
        <div class="intro-wrapper">
-        <div class="intro-section">
+        <div class="intro-section" id="intro">
             <div class="navbar">
                 <div class="logo">
-                    <img src="images/EMS.svg" alt="EMS-LOGO">
+                    <a href="#intro"><img src="images/EMS.svg" alt="EMS-LOGO"></a>
                 </div>
                 <ul>
-                  <li><h2>Intro</h2></li>
-                  <li><h2>About</h2></li>
-                  <li><h2>Shop</h2></li>
+                  <li><h2><a href="#intro">Intro</a></h2></li>
+                  <li><h2><a href="#about">About</a></h2></li>
+                  <li><h2><a href="#shop">Shop</a></h2></li>
                 </ul>
                 <div class="cart">
                     <img src="images/cart.svg" alt="cart">
@@ -109,11 +109,11 @@
                 <h1>THE E-<br>MILLENIAL<br> STORE</h1>
                 <img src="images/heroImage.png" alt="heroImage">
             </div>
-            <div class="shop"><h3>SHOP NOW</h3></div>
+            <div class="shop"><h3><a href="#shop">SHOP NOW</a></h3></div>
         </div>
        </div>
         
-        <div class="about">
+        <div class="about" id="about">
             <div>
                 <p>E-Millenial Store is an hypothetical online store for 
                     gadgets we believe every 'Millenial' or 'Gen Z' should have today. 
@@ -123,7 +123,7 @@
             </div>
         </div>
 
-        <div class="gadgets">
+        <div class="gadgets" id="shop">
             <h1>OUR GADGETS</h1>
             <div class="products" id="products">
                 <!-- <div class="product-card" id="product-box"> 
