IMPLEMENTS ADD TO CART FUNCTIONALITY AND DISPLAY CART ITEMS

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                             <th></th>
                           </tr>
                         </thead>
-                        <tbody>
-                          <tr>
+                        <tbody id="cart-list">
+                          <!-- <tr>
                             <td>1</td>
                             <td>Air Pod</td>
                             <td>400</td>
@@ -33,17 +33,7 @@
                             </td>
                             <td><button type="button" class="remove-btn">Remove</button></td>
                           </tr>
-                          <tr>
-                            <td>2</td>
-                            <td>Mobile Phone</td>
-                            <td>700</td>
-                            <td class="qty-btn">
-                                <button type="button"> - </button>
-                                <span>1</span>
-                                <button type="button"> + </button>
-                            </td>
-                            <td><button type="button" class="remove-btn">Remove</button></td>
-                          </tr>
+                          -->
                         </tbody>
                     </table>
                     <form action="" >
@@ -109,7 +99,7 @@
                 <h1>THE E-<br>MILLENIAL<br> STORE</h1>
                 <img src="images/heroImage.png" alt="heroImage">
             </div>
-            <div class="shop"><h3><a href="#shop">SHOP NOW</a></h3></div>
+            <a href="#shop" class="myshop"><div class="shop"><h3>SHOP NOW</h3></div></a>
         </div>
        </div>
         
