DISPLAY TOTAL PRICE AND NUMBER OF CART ITEMS

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                     </form>
                     <div class="summary-actions">
                         <h3>Total Amount to be Paid</h3>
-                        <h2>&#8358;80,000</h2>
+                        <h2>&#8358;<span id="total-price">80,000</span></h2>
                     </div>
                     <div class="next-btn">
-                        <button type="button">Continue Shopping</button>
+                        <button type="button" id="continue">Continue Shopping</button>
                         <button type="button">Checkout</button>
                     </div>
                 </div>
