IMPLEMENTS INPUT VALIDATIONS

--- a/index.html
+++ b/index.html
@@ -36,10 +36,25 @@
                           -->
                         </tbody>
                     </table>
-                    <form action="" >
-                        <input type="text" placeholder="Your Name">
-                        <input type="email" placeholder="Your Email">
-                        <input type="number" placeholder="Your Phone Number">
+                    <form action="" class="form">
+                        <div class="input">
+                            <p style="text-align: center;">
+                                <input type="text" placeholder="Your Name" class="name">
+                                <span id="name"></span>
+                            </p>
+                        </div>
+                        <div class="input">
+                            <p style="text-align: center;">
+                                <input type="email" placeholder="Your Email" class="email">
+                                <span id="email"></span>
+                            </p>
+                        </div>
+                        <div class="input">
+                            <p style="text-align: center;">
+                                <input type="text" placeholder="Your Phone Number" class="number">
+                                <span id="number"></span>
+                            </p>
+                        </div>
                     </form>
                     <div class="summary-actions">
                         <h3>Total Amount to be Paid</h3>
