--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             </tr>   
                         </table>
                     </div>
-                    <button type="button">OK</button>
+                    <button type="button" id="ok">OK</button>
                 </div>
             </div>
         </div>
