FIXES BUG IN INPUT VALIDATION

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                         </tbody>
                     </table>
                     <form action="" class="form">
+                        <div class="form-msg">
+                            <p>All input fields must be validated before proceeding!</p>
+                        </div>
                         <div class="input">
                             <p style="text-align: center;">
                                 <input type="text" placeholder="Your Name" class="name">
